[리팩토링] 버튼 스타일 전역화 및 아이콘 컴포넌트 추가 및 기타 수정사항 적용
- 버튼 스타일링을 index.css에 추가
- 아이콘 스타일링을 index.css에 추가 및 Icon.tsx 컴포넌트 생성
- 아이콘 이미지 경로를 public/icon으로 변경 및 파일 수정
- 블러 선택하기 아이콘의 shrink 현상 수정
- 프로필 드롭다운 목록의 중복 코드 스타일링 전역화 (.dropdown-li 클래스)
- Header.tsx에 '내 정보수정'을 '내 정보'로 수정
- 모바일 네비게이션 검색창 `w-full` 로 수정

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,44 @@
 @tailwind utilities;
 
 body {
-  @apply font-noto-sans;
-  @apply text-strong-black;
+  @apply font-noto-sans text-strong-black;
+}
+
+/* 버튼 */
+.btn {
+  @apply text-base md:text-lg lg:text-xl font-bold py-3 px-10 cursor-pointer;
+}
+
+.btn-main-green {
+  @apply bg-main-green text-white;
+}
+
+.btn-main-green:hover {
+  @apply bg-dusty-green text-white;
+}
+
+.btn-normal-gray {
+  @apply bg-normal-gray text-white;
+}
+
+.btn-normal-gray:hover {
+  @apply bg-strong-black text-white;
+}
+
+.btn-strong-black {
+  @apply bg-strong-black text-white;
+}
+
+.btn-white {
+  @apply border border-dusty-black text-strong-black;
+}
+
+/* 아이콘 */
+.icon {
+  @apply bg-no-repeat bg-contain cursor-pointer;
+}
+
+/* 프로필 드롭다운 리스트*/
+.dropdown-li {
+  @apply flex items-center px-7 py-3 hover:bg-bright-gray cursor-pointer;
 }
