[기능 추가] 더미 데이터로 도서 검색 모달 구현
- 백엔드 서버에서 제공하는 더미데이터를 활용하여 도서 검색 모달을 구현하였습니다.
- 스웨거 문서에 따르면 페이징 관련 데이터가 string 타입이므로 number 타입으로 수정 대기 중 입니다.

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,11 @@ body {
 
 /* 버튼 */
 .btn {
-  @apply text-base md:text-lg lg:text-xl font-bold py-3 px-10 cursor-pointer;
+  @apply text-base md:text-lg lg:text-xl font-bold h-14 px-10 cursor-pointer;
+}
+
+.btn-modal {
+  @apply text-base font-bold h-8 px-6 cursor-pointer transition duration-300 ease-out;
 }
 
 .btn-main-green {
