[기능 구현] 메인 페이지  코멘트 UI 구현
- 메인 페이지 도서 코멘트 데이터 정렬 및 UI 구현
- 도서 코멘트에 책 정보 저장 방식 변경
- 도서 코멘트 반응형 UI 구현
- 도서 코멘트 반응형 UI 구현

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   @apply text-base md:text-lg lg:text-xl font-bold h-14 px-10 cursor-pointer;
 }
 
+.btn-disabled {
+  @apply text-base md:text-lg lg:text-xl font-bold h-14 px-10;
+}
+
 .btn-modal {
   @apply text-base font-bold h-8 px-6 cursor-pointer transition duration-300 ease-out;
 }
