[기능 구현] 추천 슬라이더 구현
- 왼쪽, 오른쪽 화살표를 이용해 스크롤 기능 구현(모바일에서 hidden)
- 도서 이미지 클릭 시 해당 도서 코멘트 검색

--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,18 @@ body {
 .dropdown-li {
   @apply flex items-center px-7 py-3 hover:bg-bright-gray cursor-pointer;
 }
+
+/* 추천 도서 슬라이더*/
+.arrow {
+  @apply hidden lg:block cursor-pointer;
+  transition: all ease-in-out;
+}
+
+.arrow:hover {
+  transition: all ease-in-out;
+  transform: scale(1.2);
+}
+
+.books::-webkit-scrollbar {
+  display: none;
+}
