[기능 구현] 코멘트 수정 기능과 삭제 버튼 모달 창 구현, 리팩토링
- 파이어베이스 실시간 데이터베이스에 코멘트 수정 기능 추가
- EditComment, NewComment 페이지를 추가 구현에서 CommentEditor 컴포넌트 재사용
- CommonComments -> GeneralComments으로 명칭 변경
- 도서 검색 모달 너비 이슈 `w-full` 사용하여 해결
- Modal.tsx `flex justify-center` 추가하여 페이지 중앙에 위치
- CommentCard.tsx 책 제목 길이 조정 `line-clamp-1`으로 스타일링 수정
- isHomeOrComments 변수에 `isHomePage || isComments` 값 할당. 중복 제거
- Header 드롭다운 클릭 시 상위 태그에서 드롭 다운 접도록 이벤트 처리
- comments를 사용하는 컴포넌트에 headline, keyword 문자열 Props 추가
- 내가 쓴 코멘트 삭제 모달 구현 및 파이어베이스 데이터 삭제 기능 추가
- BookSelector.tsx 하드코딩된 불필요한 소스 코드 삭제

--- a/src/index.css
+++ b/src/index.css
@@ -20,11 +20,19 @@ body {
 }
 
 .btn-main-green {
-  @apply bg-dusty-green text-white;
+  @apply bg-main-green text-white;
 }
 
 .btn-main-green:hover {
-  @apply bg-main-green text-white;
+  @apply bg-dusty-green text-white;
+}
+
+.btn-border-main-green {
+  @apply border border-main-green;
+}
+
+.btn-border-main-green:hover {
+  @apply border-0 bg-dusty-green text-white;
 }
 
 .btn-normal-gray {
@@ -39,8 +47,16 @@ body {
   @apply bg-strong-black text-white;
 }
 
+.btn-strong-black:hover {
+  @apply bg-normal-gray text-white;
+}
+
 .btn-white {
   @apply border border-dusty-black text-strong-black;
+}
+
+.btn-white:hover {
+  @apply border-0 bg-normal-gray text-white;
 }
 
 /* 아이콘 */
