--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,14 @@ body {
   @apply border-0 bg-dusty-green text-white;
 }
 
+.btn-border-white {
+  @apply border border-dusty-black text-strong-black;
+}
+
+.btn-border-white:hover {
+  @apply border-0 bg-normal-gray text-white;
+}
+
 .btn-normal-gray {
   @apply bg-normal-gray text-white;
 }
@@ -52,11 +60,11 @@ body {
 }
 
 .btn-white {
-  @apply border border-dusty-black text-strong-black;
+  @apply bg-white;
 }
 
 .btn-white:hover {
-  @apply border-0 bg-normal-gray text-white;
+  @apply bg-strong-black text-white;
 }
 
 /* 아이콘 */
