--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ textarea {
 }
 
 .btn-header {
-  @apply py-2 px-5 border border-normal-gray dark:border-modal-black rounded-md;
+  @apply py-1 px-2 md:py-2 md:px-5 border border-normal-gray dark:border-modal-black rounded-md cursor-pointer transition duration-300 ease-out;
 }
 
 .btn-header:hover {
@@ -72,11 +72,11 @@ textarea {
 }
 
 .btn-strong-black {
-  @apply bg-strong-black text-white dark:bg-dark-point dark:text-modal-black;
+  @apply bg-strong-black text-white dark:bg-white dark:text-black;
 }
 
 .btn-strong-black:hover {
-  @apply bg-normal-gray text-white dark:bg-white dark:text-black;
+  @apply bg-normal-gray text-white dark:bg-dark-point dark:text-modal-black;
 }
 
 .btn-white {
