[리팩토링] 푸터 코드 수정 및 useRef를 사용하여 DOM 요소 접근
- 푸터 코드 개선
  - `min-h-screen` 최소 높이를 화면의 전체 높이로 설정
  - `flex-grow`를 사용하여 메인 컨텐츠 영역이 남은 공간을 모두 차지하도록 구현
- BookSlider 컴포넌트
  - DOM 요소에 접근할 때, `document.getElementById(id)` 코드를 `useRef`를 사용하는 것으로 수정
- 코드 개선
  - 위로 올라가기 버튼 미디어쿼리 lg에서만 사용
  - GeneralComments.tsx 변수명 수정 keyword -> title

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@ html.dark {
   @apply text-white bg-dark-bg;
 }
 
+#root {
+  @apply flex flex-col min-h-screen;
+}
+
+main {
+  @apply flex-grow;
+}
+
 textarea {
   @apply dark:bg-dark-bg placeholder-modal-black dark:placeholder-dusty2-black dark:border-normal-gray;
 }
